<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                app:cardElevation="@dimen/dimen_8">

                <LinearLayout
                    android:id="@+id/llAmountLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_4"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:layout_marginLeft="@dimen/dimen_8"
                    android:layout_marginRight="@dimen/dimen_8"
                    android:layout_marginStart="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvAmountTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_4"
                        android:text="@string/amount"
                        android:textSize="@dimen/font_16"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etExpenseAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/total_amount"
                        android:inputType="number" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                app:cardElevation="@dimen/dimen_8">

                <LinearLayout
                    android:id="@+id/llPurposeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_4"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:layout_marginLeft="@dimen/dimen_8"
                    android:layout_marginRight="@dimen/dimen_8"
                    android:layout_marginStart="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvPurposeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_4"
                        android:text="@string/purpose"
                        android:textSize="@dimen/font_16"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etExpensePurpose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/purpose_example" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                app:cardElevation="@dimen/dimen_8">

                <LinearLayout
                    android:id="@+id/llPayerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_4"
                    android:layout_marginLeft="@dimen/dimen_8"
                    android:layout_marginStart="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvPayerTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_4"
                        android:text="@string/who_paid"
                        android:textSize="@dimen/font_16"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_4"
                        android:layout_marginTop="@dimen/dimen_4">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvPayerInitials"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:background="@drawable/circular_tv"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_20"
                            android:textStyle="bold"
                            tools:text="S" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvPayer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/dimen_8"
                            android:layout_marginStart="@dimen/dimen_8"
                            android:layout_toEndOf="@+id/tvPayerInitials"
                            android:layout_toLeftOf="@+id/tvPayerPaidAmount"
                            android:layout_toRightOf="@+id/tvPayerInitials"
                            android:layout_toStartOf="@+id/tvPayerPaidAmount"
                            android:textSize="@dimen/font_16"
                            android:textStyle="bold"
                            tools:text="@string/user_name" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvPayerPaidAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/dimen_8"
                            android:layout_marginRight="@dimen/dimen_8"
                            android:textColor="@color/orange_red"
                            android:textSize="@dimen/font_16"
                            android:textStyle="bold"
                            tools:text="\u20b9500" />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_12">

                <LinearLayout
                    android:id="@+id/llFriendsSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_8"
                    android:layout_marginLeft="@dimen/dimen_8"
                    android:layout_marginRight="@dimen/dimen_8"
                    android:layout_marginStart="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvSelectFriendsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_4"
                        android:text="@string/select_friends"
                        android:textSize="@dimen/font_16"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvSelectedFriends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_4"
                        android:text="@string/no_friends_selected"
                        android:textSize="@dimen/font_16" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvSelectedFriends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bSaveExpense"
                style="@style/CtaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8"
                android:layout_marginLeft="@dimen/dimen_8"
                android:layout_marginRight="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_48"
                android:gravity="center"
                android:padding="@dimen/dimen_16"
                android:text="@string/save" />


        </LinearLayout>

        <include layout="@layout/progress_layout" />

    </FrameLayout>

</ScrollView>