...
    <string name="logout">Logout</string>
    <string name="give">Give</string>
    <string name="take">Take</string>
    <string name="add_expense">Add Expense</string>
    <string name="select_friends">Select friends</string>
    <string name="no_friends_selected">No friends selected</string>
    <string name="done">Done</string>
    <string name="purpose">Purpose</string>
    <string name="purpose_example">e.g. Cab sharing with friends</string>
    <string name="total_amount">Total amount</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="who_paid">Who paid</string>
    <string name="user_name">User name</string>
    <string name="expense_amount_empty_error">Please enter amount</string>
    <string name="expense_purpose_empty_error">Please enter purpose</string>
    <string name="expense_friends_empty_error">Please select friends to split the expense</string>
...
