<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFriendsSelection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_friends_selection" />

</LinearLayout>
